Fix layout
 - Make my board list and setting dialog wider
 - Move connection editor and note editor to the bottom when the
   screen screen is too narrow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -79,8 +79,14 @@ h3 {
   padding: 0.25rem 1rem;
 }
 
-@media (min-width: 40rem) {
+@media (min-width: 64rem) {
   .app-content {
-    width: 40rem;
+    width: 64rem;
+  }
+}
+
+@media (min-width: 80rem) {
+  .app-content {
+    width: 80rem;
   }
 }
